# ClawWok

./: README.md  design-philosophy.md  index.html  package-lock.json  package.json  vercel.json
api/: poll.ts  qq.ts
qq-relay/: package.json  vercel.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: env_doctor.rs  gateway.rs  im_connector.rs  llm_config.rs  mod.rs  skill_market.rs  skills.rs
src/components/: LogStream.tsx  SkillsCard.tsx  StepIndicator.tsx
src/components/ui/: badge.tsx  button.tsx  input.tsx
src/i18n/: en.ts  index.ts  zh.ts
src/pages/: ManagePage.tsx  SkillMarketPage.tsx
src/steps/: Step0_Welcome.tsx  Step1_Environment.tsx  Step2_Model.tsx  Step3_Channel.tsx  Step4_Complete.tsx
src/store/: skills.ts  wizard.ts
