[package]
name = "openclaw-oc1"
version = "0.1.0"
description = "OpenClaw One-Click Installer"
authors = ["OpenClaw Team"]
edition = "2021"

[lib]
name = "openclaw_oc1_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
zip = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
anyhow = "1"
dirs = "5"
which = "6"
sysinfo = "0.30"
open = "5"
